[gd_scene load_steps=16 format=3 uid="uid://bqjfdabrxujp7"]

[ext_resource type="Script" path="res://Scripts/Control.gd" id="2_1tprk"]
[ext_resource type="Texture2D" uid="uid://baiy1kygdapj1" path="res://Assets/Icons/config_icon.png" id="2_47s6l"]
[ext_resource type="Script" path="res://Scripts/GraphEdit.gd" id="2_fn1ag"]
[ext_resource type="Script" path="res://Scripts/Windows/WelcomeWindow.gd" id="3_bs36t"]
[ext_resource type="Texture2D" uid="uid://cx2kpptyyju8l" path="res://Assets/Icons/close_icon.png" id="5_f42wd"]
[ext_resource type="Texture2D" uid="uid://cwql5qpl4e4v0" path="res://Assets/Icons/new_file_icon.png" id="5_vkhra"]
[ext_resource type="Texture2D" uid="uid://cqqihpieogmyx" path="res://Assets/Icons/folder_icon.png" id="6_vjwwg"]
[ext_resource type="Script" path="res://Scripts/SidePanelNodes/SidePanelNodeDetails.gd" id="9_cxmnj"]

[sub_resource type="LabelSettings" id="LabelSettings_gptd3"]
line_spacing = 0.0
font_size = 12
font_color = Color(0.647059, 0.858824, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ehqk"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p3pmt"]
font_size = 10
font_color = Color(0.635294, 0.635294, 0.635294, 1)

[sub_resource type="GDScript" id="GDScript_n7pld"]
script/source = "extends Window


func _ready():
	hide()
"

[sub_resource type="LabelSettings" id="LabelSettings_7mcdy"]
font_color = Color(0.423529, 0.423529, 0.423529, 1)

[sub_resource type="GDScript" id="GDScript_gf31e"]
script/source = "extends Window


func _on_help_btn_pressed():
	show()


func _on_control_resized():
	var new_pos: Vector2 = get_parent().get_window().get_size_with_decorations() / 2 - size / 2
	position = new_pos
"

[sub_resource type="GDScript" id="GDScript_so3r8"]
script/source = "extends Button


func _on_pressed():
	get_window().hide()
"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1tprk")
file_path = "4.2.2023_2028"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Config" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "Config"
icon = ExtResource("2_47s6l")

[node name="NewSentence" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "New Sentence +"

[node name="NewChoice" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "New Choice +"

[node name="NewRoll" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "New DiceRoll +"

[node name="NewEnd" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "New EndPath +"

[node name="NewBridge" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "New Bridge +"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="Clear" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "Clear"

[node name="SavedNotification" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "âœ… SAVED"
label_settings = SubResource("LabelSettings_gptd3")
vertical_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
right_disconnects = true
connection_lines_curvature = 0.0
connection_lines_thickness = 3.0
zoom = 0.6
zoom_min = 0.035
zoom_max = 1.0
minimap_enabled = false
script = ExtResource("2_fn1ag")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.629
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.159973
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="SidePanelNodeDetails" type="PanelContainer" parent="VBoxContainer/Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0ehqk")
script = ExtResource("9_cxmnj")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer"]
layout_mode = 2

[node name="LabelID" type="Label" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "id"
label_settings = SubResource("LabelSettings_p3pmt")

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_f42wd")
stretch_mode = 3

[node name="NoInteractions" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="GraphNodeSelecter" type="Window" parent="."]
title = "Graph Node Picker"
position = Vector2i(0, 36)
size = Vector2i(185, 160)
visible = false
unresizable = true
always_on_top = true
popup_window = true
extend_to_title = true
content_scale_mode = 1
script = SubResource("GDScript_n7pld")

[node name="PanelContainer" type="PanelContainer" parent="GraphNodeSelecter"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GraphNodeSelecter/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SentenceSelector" type="Button" parent="GraphNodeSelecter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Sentence"

[node name="ChoiceSelector" type="Button" parent="GraphNodeSelecter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node Choice"

[node name="DiceRollSelector" type="Button" parent="GraphNodeSelecter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node DiceRoll"

[node name="EndPathSelector" type="Button" parent="GraphNodeSelecter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Node EndPath"

[node name="BridgeSelector" type="Button" parent="GraphNodeSelecter/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Nodes Bridge"

[node name="WelcomeWindow" type="Window" parent="."]
size = Vector2i(586, 188)
visible = false
wrap_controls = true
unresizable = true
borderless = true
always_on_top = true
script = ExtResource("3_bs36t")

[node name="PanelContainer" type="PanelContainer" parent="WelcomeWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="WelcomeWindow/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="WelcomeWindow/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="WelcomeWindow/PanelContainer/CenterContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="NewFileBtn" type="Button" parent="WelcomeWindow/PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "New File"
icon = ExtResource("5_vkhra")

[node name="OpenFileBtn" type="Button" parent="WelcomeWindow/PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open File..."
icon = ExtResource("6_vjwwg")

[node name="VersionLabel" type="Label" parent="WelcomeWindow/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
label_settings = SubResource("LabelSettings_7mcdy")

[node name="HelpWindow" type="Window" parent="."]
size = Vector2i(650, 400)
visible = false
unresizable = true
borderless = true
always_on_top = true
script = SubResource("GDScript_gf31e")

[node name="PanelContainer" type="PanelContainer" parent="HelpWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HelpWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HelpWindow/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="PanelContainer" type="PanelContainer" parent="HelpWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HelpWindow/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="HelpWindow/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "This app converts your story/dialog into a JSON file which you can then use to create your dialog in game.
This application allows you to modify a single dialog file, not projects with several files.

Each file contains several nodes, including a root node (RootNode) that forms the beginning of the story.
Once exported, the nodes will be saved as individual objects in the file, and each node will refer to another node.

This software isn't enough, you need to write a small script to interpret the data in the file.
An example can be found on the project's GitHub page.


Good luck and have fun creating your own stories!
"

[node name="CenterContainer" type="CenterContainer" parent="HelpWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="HelpWindow/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Ok"
script = SubResource("GDScript_so3r8")

[connection signal="resized" from="." to="WelcomeWindow" method="_on_control_resized"]
[connection signal="resized" from="." to="HelpWindow" method="_on_control_resized"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Config" to="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails" method="_on_config_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewSentence" to="." method="_on_new_sentence_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewChoice" to="." method="_on_NewOption_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewRoll" to="." method="_on_NewRoll_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewEnd" to="." method="_on_new_end_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewBridge" to="." method="_on_new_bridge_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="save"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
[connection signal="child_exiting_tree" from="VBoxContainer/Control/GraphEdit" to="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails" method="_on_graph_edit_child_exiting_tree"]
[connection signal="connection_request" from="VBoxContainer/Control/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="VBoxContainer/Control/GraphEdit" to="." method="_on_graph_edit_connection_to_empty"]
[connection signal="disconnection_request" from="VBoxContainer/Control/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="node_deselected" from="VBoxContainer/Control/GraphEdit" to="VBoxContainer/Control/GraphEdit" method="_on_node_deselected"]
[connection signal="node_deselected" from="VBoxContainer/Control/GraphEdit" to="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails" method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="VBoxContainer/Control/GraphEdit" to="VBoxContainer/Control/GraphEdit" method="_on_node_selected"]
[connection signal="node_selected" from="VBoxContainer/Control/GraphEdit" to="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails" method="_on_graph_edit_node_selected"]
[connection signal="pressed" from="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails/MarginContainer/ScrollContainer/PanelContainer/HBoxContainer/TextureButton" to="VBoxContainer/Control/MarginContainer/SidePanelNodeDetails" method="_on_texture_button_pressed"]
[connection signal="close_requested" from="GraphNodeSelecter" to="." method="_on_graph_node_selecter_close_requested"]
[connection signal="close_requested" from="GraphNodeSelecter" to="GraphNodeSelecter" method="_on_close_requested"]
[connection signal="focus_exited" from="GraphNodeSelecter" to="." method="_on_graph_node_selecter_focus_exited"]
[connection signal="pressed" from="GraphNodeSelecter/PanelContainer/VBoxContainer/SentenceSelector" to="." method="_on_new_sentence_pressed"]
[connection signal="pressed" from="GraphNodeSelecter/PanelContainer/VBoxContainer/ChoiceSelector" to="." method="_on_NewOption_pressed"]
[connection signal="pressed" from="GraphNodeSelecter/PanelContainer/VBoxContainer/DiceRollSelector" to="." method="_on_NewRoll_pressed"]
[connection signal="pressed" from="GraphNodeSelecter/PanelContainer/VBoxContainer/EndPathSelector" to="." method="_on_new_end_pressed"]
[connection signal="pressed" from="GraphNodeSelecter/PanelContainer/VBoxContainer/BridgeSelector" to="." method="_on_new_bridge_pressed"]
[connection signal="pressed" from="WelcomeWindow/PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer/NewFileBtn" to="." method="_on_new_file_btn_pressed"]
[connection signal="pressed" from="WelcomeWindow/PanelContainer/CenterContainer/VBoxContainer2/HBoxContainer/OpenFileBtn" to="." method="_on_open_file_btn_pressed"]
[connection signal="pressed" from="HelpWindow/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/Continue" to="HelpWindow/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/Continue" method="_on_pressed"]
